<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/plex_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_header"
            android:scaleType="centerCrop"
            android:src="@drawable/deadpool_header"
            app:layout_constraintBottom_toTopOf="@+id/guideline_header_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_header_size"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"
            tools:layout_editor_absoluteY="182dp"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/movie_poster"
            android:src="@drawable/deadpool_poster"
            app:layout_constraintBottom_toTopOf="@+id/guideline_header_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_header_size"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/deadpool_poster" />

        <ImageView
            android:id="@+id/plex_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_play_circle_filled"
            app:layout_constraintBottom_toTopOf="@+id/guideline_header_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_header_size" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_title_deadpool"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/moviePoster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plex_play" />

        <TextView
            android:id="@+id/movieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_year_deadpool"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/moviePoster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />


        <ImageView
            android:id="@+id/plex_download"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/download_movie_button"
            android:src="@drawable/ic_download"
            app:layout_constraintLeft_toRightOf="@+id/watchedButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster" />


        <ImageView
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/add_to_playlist_button"
            android:src="@drawable/ic_add"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/watchedButton"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

        <ImageView
            android:id="@+id/watchedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/mark_as_watched_button"
            android:src="@drawable/ic_watched"
            app:layout_constraintLeft_toRightOf="@+id/addButton"
            app:layout_constraintRight_toLeftOf="@+id/plex_download"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

        <ImageView
            android:id="@+id/addWatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/time_icon"
            android:src="@drawable/ic_watch_later"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addButton" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/duration_movie_deadpool"
            app:layout_constraintBottom_toBottomOf="@+id/addWatch"
            app:layout_constraintLeft_toRightOf="@+id/addWatch"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addWatch" />

        <RatingBar
            android:id="@+id/movieRatingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>